Add no-cache headers to all dragon creation responses (basically all responses). Update GWT to 2.4.0.

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>Geniverse</name>
 	<comment></comment>
 	<projects>
+		<project>biologica</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
