--- a/.settings/com.google.appengine.eclipse.core.prefs
+++ b/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,4 +1,6 @@
-#Thu Dec 16 17:24:01 EST 2010
+#Tue Jan 17 14:33:42 PST 2012
 eclipse.preferences.version=1
 filesCopiedToWebInfLib=
+googleCloudSqlEnabled=false
+localDevMySqlEnabled=true
 ormEnhancementInclusions=
